plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.0'
    id 'io.spring.dependency-management' version '1.1.4'
    id 'war'
}

group = 'xyz.miyayu'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

repositories {
    mavenCentral()
}

tasks.register('buildDeployWar', War) {
    archiveFileName = 'attendanceApi.war'
}

buildDeployWar.dependsOn build

tasks.withType(JavaCompile) {
     options.encoding  = 'UTF-8'
}



dependencies {
    //implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    //implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework:spring-core'
    implementation 'org.springframework.security:spring-security-web'

    implementation 'org.modelmapper:modelmapper:2.3.0'
    implementation 'com.mysql:mysql-connector-j:8.3.0'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor "org.projectlombok:lombok"
}


tasks.named('test') {
    useJUnitPlatform()
}
